--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-router-dom": "^5.1.2",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
