--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "polished": "^3.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "reactotron-react-js": "^3.3.7",
